cluster-api/templates/external/capi-validating-webhook-configuration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: system-cluster-api/capi-serving-cert
  labels:
    cluster.x-k8s.io/provider: cluster-api
  name: capi-validating-webhook-configuration
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-cluster
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.cluster.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - clusters
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-clusterclass
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.clusterclass.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - clusterclasses
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-machine
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machine.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - machines
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-machinedeployment
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinedeployment.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinedeployments
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-machinedrainrule
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinedrainrule.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinedrainrules
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-machinehealthcheck
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinehealthcheck.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinehealthchecks
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-machineset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machineset.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinesets
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-runtime-cluster-x-k8s-io-v1alpha1-extensionconfig
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.extensionconfig.runtime.cluster.x-k8s.io
    rules:
      - apiGroups:
          - runtime.cluster.x-k8s.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - extensionconfigs
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-cluster-x-k8s-io-v1beta1-machinepool
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.machinepool.cluster.x-k8s.io
    rules:
      - apiGroups:
          - cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - machinepools
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-addons-cluster-x-k8s-io-v1beta1-clusterresourceset
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.clusterresourceset.addons.cluster.x-k8s.io
    rules:
      - apiGroups:
          - addons.cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterresourcesets
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-addons-cluster-x-k8s-io-v1beta1-clusterresourcesetbinding
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.clusterresourcesetbinding.addons.cluster.x-k8s.io
    rules:
      - apiGroups:
          - addons.cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterresourcesetbindings
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-ipam-cluster-x-k8s-io-v1beta1-ipaddress
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.ipaddress.ipam.cluster.x-k8s.io
    rules:
      - apiGroups:
          - ipam.cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - ipaddresses
    sideEffects: None
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      service:
        name: capi-webhook-service
        namespace: system-cluster-api
        path: /validate-ipam-cluster-x-k8s-io-v1beta1-ipaddressclaim
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: validation.ipaddressclaim.ipam.cluster.x-k8s.io
    rules:
      - apiGroups:
          - ipam.cluster.x-k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - ipaddressclaims
    sideEffects: None
